--- a/game.html
+++ b/game.html
@@ -7,10 +7,13 @@ body {
     font-family: 'Charm';}
 </style>
 </head>
-<body><h1 style="font-size:50px;">2048 Game</h1><h1>By Sushmita Paul</h1>
+<body>
+	<h1 style="font-size:50px;">2048 Game</h1>
+	<h1>By Sushmita Paul</h1>
 	<center>
 	<a style="cursor: pointer; padding-left: 40%;"  onclick="return load();" ><button class="button new game">New game</button></a>
-	<div id="canvas"></div>           <h2>Score : <div style="display:inline;" id="score"></div></h2>
+	<div id="canvas"> </div>  
+		<h2>Score : <div style="display:inline;" id="score"></div></h2>
 	<b>HOW TO PLAY:</b> Use your arrow keys to move the tiles.
 	</center>
 	<script type="text/javascript">
